hphp/test/zend/bad/ext/standard/tests/general_functions/call_user_method.php
<?php
class a {
	static function b() {
		return true;
	}
}
$a = new a();
$res = call_user_method('b', $a);
var_dump($res);
?>